Fix dark mode themes on navbar

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -10,5 +10,5 @@
     font-family: 'Courier New', Courier, monospace;
     font-weight: 700;
     font-size: 1.7rem;
-    color: #e34329;
+    color: #fc6e26;
 }
